# template-rust-grpc

./: .gitignore  .mise.sh  .mise.toml  Cargo.toml  dev.sh  package.json  protoGen.sh
api/: Cargo.toml
proto/: api.proto
sh/: env.sh  upgrade.sh
src/api/: version.rs
volo-gen/: Cargo.toml  volo.yml
volo-gen/src/: lib.rs
