[package]
name = "grpc"
version = "0.1.0"
edition.workspace = true

[package.metadata.cargo-machete]
ignored = ["static_init"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo-gen = { path = "./volo-gen" }

volo.workspace = true
volo-grpc.workspace = true
pilota.workspace = true

anyhow.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing = "0.1.41"
loginit = "0.1.18"
genv = "0.1.16"
static_init = "1.0.4"
seekstorm = { version = "0.13.3", features = ["zh"], default-features = false }
xerr = "0.1.15"
aok = "0.1.17"
volo_layer = "0.1.4"
const-str = "0.7.0"

[workspace]
members = ["volo-gen"]
resolver = "2"

[workspace.package]
edition = "2024"

[workspace.dependencies]
# we recommend to use the latest framework version for new features and bug fixes
volo = "*"
volo-build = "*"
volo-grpc = "*"
pilota = "*"

anyhow = "1"
futures = "0.3"
tokio = "1"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
# debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false

[profile.dev]
incremental = true
split-debuginfo = "unpacked"
opt-level = 1
